# Story-GameEngine

./: .gitignore  Adventure.sln  CMakeLists.txt  README.md  unique.txt
Adventure/: Adventure.vcxproj  Adventure.vcxproj.filters  AdventureApp.cpp  AdventureApp.h  CMakeLists.txt  Unit.cpp  Unit.h  main.cpp
Story/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  Story.h  Story.vcxproj  Story.vcxproj.filters  StoryApp.cpp  StoryApp.h  StoryUtils.h  WindowImplementation.h  pch.h
Story/Assets/Shader/: fragmentShader1.glsl  myFragmentShader.glsl  myVertexShader.glsl  vertexShader1.glsl
Story/GLFWimpl/: GlfwImplementation.cpp  GlfwImplementation.h  pch.cpp
Story/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt  stbi.vcxproj
